fixed a spacing issue
spacing issue in the top header fixed, also reformatted the comments

--- a/website-prototype.css
+++ b/website-prototype.css
@@ -1,44 +1,33 @@
 .top-btn-group button {
-    background-color: #80bdff;
-    /* Blue background */
-    border: 1px solid blue;
-    /* Blue border */
-    cursor: pointer;
-    /* Pointer/hand icon */
-}
-
-.btn-group button {
-    background-color: #80bdff;
-    /* Blue background */
-    border: 1px solid blue;
-    /* Blue border */
-    cursor: pointer;
-    /* Pointer/hand icon */
-    display: block;
-    /* Make the buttons appear below each other */
-    font-size: 25px;
-    height: 50px;
-    margin-bottom: 5px;
-    width: 100%;
-    /* Set a width if needed */
-}
-
-.bottom-btn-group button {
-    cursor: pointer;
-    /* Pointer/hand icon */
-    margin-right: 16px;
-    /*Set spacing on the right side between buttons*/
+    background-color: #80bdff; /* Blue background */
+    border: 1px solid blue; /* Blue border */
+    cursor: pointer; /* Pointer/hand icon */
+    margin: 5px 5px 5px 1px; /* margin px on all 4 sides */
 }
 
 .circlebtn {
     border-radius: 50%; /* circle button */
 }
 
+.btn-group button {
+    background-color: #80bdff;/* Blue background */
+    border: 1px solid blue;/* Blue border */
+    cursor: pointer;/* Pointer/hand icon */
+    display: block;/* Make the buttons appear below each other */
+    font-size: 25px;
+    height: 50px;
+    margin-bottom: 5px;
+    width: 100%; /* Set a width if needed */
+}
+
+.bottom-btn-group button {
+    cursor: pointer; /* Pointer/hand icon */
+    margin-right: 16px;/*Set spacing on the right side between buttons*/
+}
+
 .bottom-btn {
-    background-color: #80bdff;
-    /* Blue background */
-    border: 1px solid blue;
-    /* Blue border */
+    background-color: #80bdff;/* Blue background */
+    border: 1px solid blue;/* Blue border */
 }
 
 .emer-button {
@@ -83,14 +72,12 @@
     border: 4px solid #e04e5e;
 }
 
-.emer-button.border:before {
-    border-bottom: none;
-    /* to prevent the border-line showing up in the middle of the shape */
+.emer-button.border:before { 
+    border-bottom: none; /* to prevent the border-line showing up in the middle of the shape */
 }
 
 .emer-button.border:after {
-    border-top: none;
-    /* to prevent the border-line showing up in the middle of the shape */
+    border-top: none; /* to prevent the border-line showing up in the middle of the shape */
 }
 
 /* Button hover styles */
